vlib/v/checker/tests/incorrect_name_variable.vv
fn main() {
	_abc := 1
	_ := _abc
}
